--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/*version 13082021*/
+/*version 15082021*/
 /* Mobil first*/
 body{
     font-family: "Raleway", sans serif;
@@ -276,7 +276,7 @@ input::placeholder{
     font-weight: 700;
 }
 .hebtext{
-    font-size: 13px;
+    font-size: 15px;
     font-weight: bolder;
     margin-top: 3px;
     margin-bottom: 0px;
@@ -381,7 +381,7 @@ input::placeholder{
 @media screen and (min-width: 820px) {
 /*header*/
 header{
-        grid-template: "topLeft top top topRight" 100px / auto 160px 160px 100px;
+        grid-template: "topLeft top top topRight" 100px / auto 160px 160px 120px;
 }
 .menu{
    grid-area: top;
@@ -402,11 +402,11 @@ header{
     padding-top:53px;  
 }
 .logo{
-    padding-left: 25px; 
+    padding-left: 45px; 
 }
 /*Trouver votre hébergement*/
 .trouverhebergement{
-    padding-left: 30px;
+    padding-left: 45px;
 }
 /*Formulaire rechercher*/
 .formulaire{
@@ -442,8 +442,10 @@ header{
     width: 100%;
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: left;
+    gap: 40px;
     margin-bottom:20px;
+    ;
 }
 /*Hébergement*/
 .hebergement{
@@ -453,6 +455,7 @@ header{
     flex-direction: column;
     background-color: #F2F2F2;
     border-radius: 20px;
+    padding: 25px;
     
 }
 .titreheb{
@@ -469,7 +472,7 @@ header{
     justify-content: space-between;
 }
 .BlocHebergement{
-    width: 33%;
+    width: 32%;
     height: 210px;
     
 }
@@ -483,9 +486,10 @@ header{
    font-size: 18px
 }
 .BlocPlusPopulaire{
-    width:29%;
+    width:28%;
     height: 600px;
     border-radius: 20px;  
+    padding: 25px;
 }
 
 .BlocPop{
@@ -498,7 +502,7 @@ header{
     }
 .h3titre{
     padding-right: 0px;
-    font-size: 13px;
+    font-size: 15px;
     
 }
 .etoilespop{
@@ -512,7 +516,8 @@ header{
     padding-left: 10px;
 }
 .BlocActivites{
-   padding: 0;
+    padding-left: 45px;
+    padding-right: 45px;
    margin-top: 40px;
    margin-bottom: 25px;  
 }
@@ -526,14 +531,15 @@ header{
     height: 445px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content:space-between ;
 }
 .activite{
     height: 100%;
     margin-bottom: 0;
+  
 }
 .activitedesktop{
-    width: 24%;
+    width: 23%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -555,7 +561,7 @@ header{
     height: 200px;
 }
 .imgactivite3{
-    height: 100px;
+    height: 110px;
 }
 .imgactivite56{
     height: 155px;
@@ -563,8 +569,7 @@ header{
 /*Footer*/
 .footer{
     flex-direction: row;
-    justify-content: space-between;
-    gap: 150px
+    gap: 230px;
 }
 }
 /*------------------tablette----------------*/
@@ -641,5 +646,6 @@ header{
 .footer{
        flex-direction: row;
        gap:40px; 
+       justify-content: space-between;
 }
 }
