--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
     font-family: "Raleway", "sans serif";
     margin: 0px;
 }
-/*Parametre -- txt*/
+/*Parametre - txt*/
 .h1Title{
     font-size: 22px;
     font-weight: bolder;
